--- a/arch/arm/boot/dts/qcom/sdm660-mtp_jasmine.dts
+++ b/arch/arm/boot/dts/qcom/sdm660-mtp_jasmine.dts
@@ -1,4 +1,5 @@
 /* Copyright (c) 2016-2017, The Linux Foundation. All rights reserved.
+ * Copyright (C) 2018 XiaoMi, Inc.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -13,16 +14,35 @@
 
 /dts-v1/;
 
-#include "sdm660_jasmine.dtsi"
-#include "sdm660-mtp_jasmine.dtsi"
+#include "sdm660.dtsi"
+#include "sdm660-mtp.dtsi"
 #include "sdm660-internal-codec.dtsi"
 #include "sdm660-novatek-i2c_wayne.dtsi"
+
 / {
 	model = "Qualcomm Technologies, Inc. SDM 660 PM660 + PM660L MTP E7S";
 	compatible = "qcom,sdm660-mtp", "qcom,sdm660", "qcom,mtp";
 	qcom,board-id = <0x10008 0>;
 	qcom,pmic-id = <0x0001001b 0x0101011a 0x0 0x0>,
 			<0x0001001b 0x0201011a 0x0 0x0>;
+
+  firmware: firmware {
+          android {
+                  compatible = "android,firmware";
+                  fstab {
+    				              /delete-node/ system;
+                          /delete-node/ vendor;
+                          vendor {
+                                  compatible = "android,vendor";
+                                  dev = "/dev/block/platform/soc/c0c4000.sdhci/by-name/vendor";
+                                  type = "ext4";
+                                  mnt_flags = "ro,barrier=1,discard";
+                                  fsmgr_flags = "wait,slotselect";
+                                  status = "ok";
+                                  };
+                        };
+                  };
+          };
 };
 
 &tavil_snd {
@@ -80,10 +100,19 @@
 &spi_8{
 	status = "ok";
 
+	/*
+	pinctrl-names = "spi_active", "spi_sleep";
+	pinctrl-0 = <&spi_3_active>;
+	pinctrl-1 = <&spi_3_sleep>;*/
+
+
 	dbmd4_spi: dbmd4_interface@0 {
 		compatible = "dspg,dbmd4-spi";
 		reg = <0>;
 		spi-max-frequency = <1000000>;
+
+		//spi-cpol; //CPOL bit set for SPI polarity
+		//spi-cpha; //CPHA bit set for SPI Phase
 
 		read-chunk-size  = <0x2000>;    /* 8192 bytes   */
 		write-chunk-size = <0x20000>;   /* 131072 bytes */
@@ -98,6 +127,8 @@
 	    pinctrl-names = "hall_active","hall_suspend";
 	    pinctrl-0 = <&hall_int_active>;
 	    pinctrl-1 = <&hall_int_suspend>;
+	    //interrupt-parent = <&msm_gpio>;
+	    //interrupts = <0 107 3>;
 	    vdd-io-supply= <&pm660_l8>;
 	    interrupt-names = "hall_irq";
 	    hall,irq-gpio = <&tlmm 76 0x0>;
@@ -105,7 +136,7 @@
 
 	dbmdx {
 		compatible = "dspg,dbmdx-codec";
-#if 0
+#if 0//def CUSTOMER_PLATFORM
 		status = "okay";
 		qcom,use-pinctrl;
 		pinctrl-names = "dbmdx_default", "dbmdx_sleep";
@@ -144,6 +175,11 @@
 			     0x0000 3000000 0 4800000>;
 		va-mic-config = <0xf041 0x1044 0x0008>;
 		va-mic-mode = <4>;
+/*
+		digital_mic_digital_gain = <0x14>;
+		analog_mic_analog_gain = <0x3>;
+		analog_mic_digital_gain = <0x14>;
+*/
 		master-clk-rate = <32768>;
 		/* constant-clk-rate = <32768>; */
 		firmware_id = <0xdbd4>;
